src/objects/fflbx__LockboxSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>fflbx__CashEntryBatchSize__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Cash Entry Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__CashMatchingBatchSize__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Cash Matching Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__CashMatchingThreshold__c</fullName>
        <defaultValue>50</defaultValue>
        <label>Cash Matching Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__ChatterForCashEntry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chatter Notification For Cash Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fflbx__ChatterForCashMatching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chatter Notification For Cash Matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fflbx__CurrencyMode__c</fullName>
        <defaultValue>&apos;Account&apos;</defaultValue>
        <label>Currency Mode</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__EmailForCashEntry__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Email Notification For Cash Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fflbx__EmailForCashMatching__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Email Notification For Cash Matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fflbx__ImportBatchSize__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Import Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__MaximumLinesInGroup__c</fullName>
        <defaultValue>24</defaultValue>
        <label>Maximum Lines in a Group (CE Creation)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__MaximumLinesOnCashEntry__c</fullName>
        <defaultValue>50</defaultValue>
        <label>Maximum Lines on a Cash Entry</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__MaximumQueueSize__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Maximum Queue Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__TaskForCashEntry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Notification For Cash Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fflbx__TaskForCashMatching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Notification For Cash Matching</label>
        <type>Checkbox</type>
    </fields>
    <label>Lockbox Settings</label>
</CustomObject>